@@ -90,8 +90,8 @@ static void _draw_hershey_string(vfontContext *vc, R_GE_gcontext *gc, GEDevDesc 
 static void _draw_hershey_stroke(vfontContext *vc, R_GE_gcontext *gc, GEDevDesc *dd, bool pendown, double deltax,
                                  double deltay)
 {
-    _draw_stroke(vc, gc, dd, pendown, fromDeviceWidth(HERSHEY_UNITS_TO_USER_UNITS(deltax), GE_INCHES, dd),
-                 fromDeviceHeight(HERSHEY_UNITS_TO_USER_UNITS(deltay), GE_INCHES, dd));
+    _draw_stroke(vc, gc, dd, pendown, fromDeviceWidth(HERSHEY_X_UNITS_TO_USER_UNITS(deltax), GE_INCHES, dd),
+                 fromDeviceHeight(HERSHEY_Y_UNITS_TO_USER_UNITS(deltay), GE_INCHES, dd));
 }
 
 static void moverel(double dx, double dy, vfontContext *vc)
@@ -167,7 +167,7 @@ static double R_VF_VStrWidth(const unsigned char *s, R_GE_gcontext *gc, GEDevDes
 
 static double _label_height_hershey(R_GE_gcontext *gc, GEDevDesc *dd, const unsigned short *label)
 {
-    return (HERSHEY_UNITS_TO_USER_UNITS(HERSHEY_LARGE_CAPHEIGHT));
+    return (HERSHEY_Y_UNITS_TO_USER_UNITS(HERSHEY_LARGE_CAPHEIGHT));
 }
 
 static double R_VF_VStrHeight(const unsigned char *s, R_GE_gcontext *gc, GEDevDesc *dd)
@@ -506,7 +506,7 @@ static double _label_width_hershey(R_GE_gcontext *gc, GEDevDesc *dd, const unsig
         ptr++; /* bump pointer in string */
     }
 
-    return HERSHEY_UNITS_TO_USER_UNITS(width);
+    return HERSHEY_X_UNITS_TO_USER_UNITS(width);
 }
 
 /* _draw_hershey_penup_stroke() draws a penup stroke, along a vector
@@ -607,7 +607,7 @@ static void _draw_hershey_string(vfontContext *vc, R_GE_gcontext *gc, GEDevDesc 
         {
             if (line_width_type != 1)
             {
-                gc->lwd = HERSHEY_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
+                gc->lwd = HERSHEY_X_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
                 line_width_type = 1;
             }
             _draw_hershey_glyph(vc, gc, dd, c & GLYPH_SPEC, charsize, OCCIDENTAL, false);
@@ -617,7 +617,7 @@ static void _draw_hershey_string(vfontContext *vc, R_GE_gcontext *gc, GEDevDesc 
         {
             if (line_width_type != 2)
             {
-                gc->lwd = HERSHEY_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
+                gc->lwd = HERSHEY_X_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
                 line_width_type = 2;
             }
             _draw_hershey_glyph(vc, gc, dd, c & GLYPH_SPEC, charsize, ORIENTAL, false);
@@ -770,7 +770,7 @@ static void _draw_hershey_string(vfontContext *vc, R_GE_gcontext *gc, GEDevDesc 
                 /* draw the character */
                 if (line_width_type != 1)
                 {
-                    gc->lwd = HERSHEY_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
+                    gc->lwd = HERSHEY_X_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
                     line_width_type = 1;
                 }
                 _draw_hershey_glyph(vc, gc, dd, char_glyphnum, charsize, OCCIDENTAL, oblique);
@@ -819,7 +819,7 @@ static void _draw_hershey_string(vfontContext *vc, R_GE_gcontext *gc, GEDevDesc 
                     _draw_hershey_penup_stroke(vc, gc, dd, shift * (double)kana_width, 0.0, charsize, oblique);
                     if (line_width_type != 2)
                     {
-                        gc->lwd = HERSHEY_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
+                        gc->lwd = HERSHEY_X_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
                         line_width_type = 2;
                     }
                     _draw_hershey_glyph(vc, gc, dd, glyphnum, (SMALL_KANA_SIZE)*charsize, OCCIDENTAL, oblique);
@@ -834,13 +834,13 @@ static void _draw_hershey_string(vfontContext *vc, R_GE_gcontext *gc, GEDevDesc 
                     {
                         if (line_width_type != 2)
                         {
-                            gc->lwd = HERSHEY_UNITS_TO_USER_UNITS(HERSHEY_ORIENTAL_STROKE_WIDTH);
+                            gc->lwd = HERSHEY_X_UNITS_TO_USER_UNITS(HERSHEY_ORIENTAL_STROKE_WIDTH);
                             line_width_type = 2;
                         }
                     }
                     else if (line_width_type != 1)
                     {
-                        gc->lwd = HERSHEY_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
+                        gc->lwd = HERSHEY_X_UNITS_TO_USER_UNITS(HERSHEY_STROKE_WIDTH);
                         line_width_type = 1;
                     }
                     _draw_hershey_glyph(vc, gc, dd, glyphnum, charsize, OCCIDENTAL, oblique);
